[gd_scene load_steps=4 format=3 uid="uid://c8aqj7yfxlnrb"]

[ext_resource type="Script" uid="uid://b4wwebw7tvafs" path="res://scripts/multiplayer_game.gd" id="1_lfgxs"]
[ext_resource type="PackedScene" path="res://oldmain.tscn" id="2_lquwl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.901961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.501961)
shadow_size = 5

[node name="MultiplayerGame" type="Node"]
script = ExtResource("1_lfgxs")

[node name="GameInstance" parent="." instance=ExtResource("2_lquwl")]

[node name="MultiplayerOverlay" type="CanvasLayer" parent="."]
layer = 10

[node name="ConnectionPanel" type="Panel" parent="MultiplayerOverlay"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerOverlay/ConnectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StatusLabel" type="Label" parent="MultiplayerOverlay/ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "Connection lost. Attempting to reconnect..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ReconnectButton" type="Button" parent="MultiplayerOverlay/ConnectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reconnect"

[node name="LeaveButton" type="Button" parent="MultiplayerOverlay/ConnectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Leave Game"

[node name="PlayerLabels" type="Control" parent="MultiplayerOverlay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Player1Label" type="Label" parent="MultiplayerOverlay/PlayerLabels"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Player 1 (You)"
horizontal_alignment = 1

[node name="Player2Label" type="Label" parent="MultiplayerOverlay/PlayerLabels"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 15.0
grow_vertical = 2
text = "Player 2"
horizontal_alignment = 1

[node name="Player3Label" type="Label" parent="MultiplayerOverlay/PlayerLabels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Player 3"
horizontal_alignment = 1

[node name="Player4Label" type="Label" parent="MultiplayerOverlay/PlayerLabels"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = -10.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Player 4"
horizontal_alignment = 1

[connection signal="pressed" from="MultiplayerOverlay/ConnectionPanel/VBoxContainer/ReconnectButton" to="." method="_on_reconnect_button_pressed"]
[connection signal="pressed" from="MultiplayerOverlay/ConnectionPanel/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
